--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-confirm-alert": "^2.7.0",
     "react-date-picker": "^8.3.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
