--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
+    "react-cookie": "^4.1.1",
     "react-date-picker": "^8.3.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
