--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@progress/kendo-react-dateinputs": "^4.10.0",
+    "@react-google-maps/api": "^2.7.0",
     "@syncfusion/ej2-react-calendars": "^19.3.53",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
