--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-date-picker": "^8.3.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
