--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.3",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
