--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
@@ -25,6 +26,7 @@
     "react-cookie": "^4.1.1",
     "react-date-picker": "^8.3.5",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.3.1",
     "react-metismenu": "^1.4.0",
     "react-pdf": "^5.5.0",
