--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "history": "^5.2.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
